--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>bla bla</title>
+		<title>Kaedan's Website</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -27,7 +27,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1>this is my website</h1>
+					<h1>This is my website</h1>
 					<p>By Kaedan</p>
 					<p>(you can go on my website when ever you want but don't delete anything)</p>
 				</header>
