slides with my favourite things

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</header>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/UDYC9eBkvrs" frameborder="0" allowfullscreen></iframe>
 				<footer>
-					<a href="#first" class="button style2 scrolly">go to next slide</a>
+					<a href="#first" class="button style2 scrolly">go to slides with my favorite things<br></a>
 				</footer>
 			</section>
 
