--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<div class="row">
 						<div class="12u">
 							<ul class="actions">
-								<li><input type="submit" value="go,send and leave website" /></li>
+								<li><input type="submit" value="go,send and leave website" action="#" /></li>
 							</ul>
 						</div>
 					</div>
